# compiler-engineering

./: .gitmodules  README.md
knowledge_sharing/: mk_template.sh  watch.sh
knowledge_sharing/01_intro/: main.typ
knowledge_sharing/02_ir_and_ssa/: CMakeLists.txt  README.md  TASK.md  main.typ  typst.toml
knowledge_sharing/02_ir_and_ssa/exercises/01_const_fold_standalone/: CMakeLists.txt  README.md  main.cpp
knowledge_sharing/02_ir_and_ssa/exercises/01_const_fold_standalone/solution/: populate_function.cpp
knowledge_sharing/02_ir_and_ssa/exercises/01_const_fold_standalone/your_turn/: populate_function.cpp
knowledge_sharing/02_ir_and_ssa/exercises/02_build_module_irbuilder/: CMakeLists.txt  README.md  main.cpp
knowledge_sharing/02_ir_and_ssa/exercises/02_build_module_irbuilder/solution/: populate_function.cpp
knowledge_sharing/02_ir_and_ssa/exercises/02_build_module_irbuilder/your_turn/: populate_function.cpp
knowledge_sharing/02_ir_and_ssa/exercises/03_def_use_scope_change/: CMakeLists.txt  README.md  main.cpp
knowledge_sharing/02_ir_and_ssa/src/: IRAndSSALabPass.cpp
knowledge_sharing/02_ir_and_ssa/template/: IRAndSSALabPass.cpp
knowledge_sharing/02_ir_and_ssa/tests/: template_checkpoints.ll  test.c  test.ll  test_o0.ll
knowledge_sharing/03_pass_opt/: main.typ
knowledge_sharing/03_pass_opt/figures/: passes.drawio
